Add DSSR config files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 **.swp**	
 data/*
 **junk**
-
+**.pdb
+**torsions.txt
+**.dbn
+**.ct
+**.bpseq
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
