--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ license = {text = "MIT License"}
 
 rnaglib_first='rnaglib.examples.rnaglib_first:main'
 rnaglib_second='rnaglib.examples.rnaglib_second:main'
+rnaglib_third='rnaglib.examples.third_example:main'
 rnaglib_prepare_data='rnaglib.bin.rnaglib_prepare_data:main'
 rnaglib_tokenize='rnaglib.bin.rnaglib_tokenize:main'
 rnaglib_download='rnaglib.bin.rnaglib_download:main'
