--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 name="rnaglib"
 readme = "README.md"
-version="2.0.6"
+version="2.0.7"
 authors=[{name="Vincent Mallet", email="vincentx15@gmail.com"}, 
 	 {name="Carlos Oliver", email="oliver@biochem.mpg.de"},
 	 {name="Jonathan Broadbent", email="jonathan.broadbent@mail.utoronto.ca"},
@@ -56,4 +56,4 @@ packages = ['rnaglib',
 
 [tool.setuptools.package-data]
 
-rnaglib = ["data_loading/graph_index_NR.json"]
+rnaglib = ["data_loading/graph_index_NR.json", "config/rna_smiles.txt"]
