--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 name="rnaglib"
 readme = "README.md"
-version="2.0.10"
+version="2.0.11"
 authors=[{name="Vincent Mallet", email="vincentx15@gmail.com"}, 
 	 {name="Carlos Oliver", email="oliver@biochem.mpg.de"},
 	 {name="Jonathan Broadbent", email="jonathan.broadbent@mail.utoronto.ca"},
@@ -51,7 +51,9 @@ packages = ['rnaglib',
 	    'rnaglib.kernels',
 	    'rnaglib.learning',
 	    'rnaglib.utils',
-	    'rnaglib.config'
+	    'rnaglib.config',
+	    'rnaglib.bin',
+ 	    'rnaglib.examples'
 	    ]
 
 [tool.setuptools.package-data]
