rough draft splitter and new indexing script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ rnaglib_third='rnaglib.examples.third_example:main'
 rnaglib_prepare_data='rnaglib.bin.rnaglib_prepare_data:main'
 rnaglib_tokenize='rnaglib.bin.rnaglib_tokenize:main'
 rnaglib_download='rnaglib.bin.rnaglib_download:main'
+rnaglib_index='rnaglib.bin.rnaglib_index:main'
 
 [tool.setuptools]
 
