adapted gitignore to ignore exp results

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ fonts/*
 **.ct
 **.bpseq
 
+## Expereiments reuslts
+rnaglib/tasks/experiments/*/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
