--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 
 name="rnaglib"
 readme = "README.md"
-version="2.2.5"
+version="2.2.6"
 authors=[{name="Vincent Mallet", email="vincentx15@gmail.com"}, 
 	 {name="Carlos Oliver", email="oliver@biochem.mpg.de"},
 	 {name="Jonathan Broadbent", email="jonathan.broadbent@mail.utoronto.ca"},
@@ -22,6 +22,7 @@ dependencies = ['joblib',
 	    'tqdm',
 	    'biopython',
 	    'loguru',
+	    'fr3d @ git+https://github.com/cgoliver/fr3d-python.git'
 	    ]
 
 requires-python = ">=3.7"
