--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ requires-python = ">=3.7"
 license = { text = "MIT License" }
 
 dependencies = [
-    "biopython==1.0.2",
+    "biopython",
     "dill",
     "joblib",
     "loguru",
