PEP8 + some graph->rna renaming

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
+biopython
+bidict
 joblib
-requests
-torch
 networkx
 numpy
+requests
 seaborn
 scikit-learn
+torch
 tqdm
-biopython
 fr3d @ git+https://github.com/cgoliver/fr3d-python.git
