Refactor from_args into from_database, put database_related stuff in a separate file, add default functions for splits/dataset creations

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 **.swp**	
 **x3dna-dssr**
 **wandb**
-rnaglib/data/*
+src/rnaglib/data/*
+src/rnaglib/tasks/data/*
 chain_embs/*
 datasets/*
 doc/*
@@ -13,7 +14,7 @@ fonts/*
 **.ct
 **.bpseq
 
-## Expereiments reuslts
+## Experiments reuslts
 rnaglib/tasks/experiments/*/
 
 # Byte-compiled / optimized / DLL files
