--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,5 +2,6 @@ sphinx
 sphinx-prompt
 sphinx_substitution_extensions
 sphinx-rtd-theme
+sphinx_autodoc_typehints
 myst-parser
 git+https://github.com/cgoliver/rnaglib.git
