--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -7,7 +7,9 @@ requests
 seaborn
 scikit-learn
 torch
+torch_geometric
 tqdm
 gemmi
 pytest
+rna-fm
 fr3d @ git+https://github.com/cgoliver/fr3d-python.git
