--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
           echo $PATH
           which RNAalign
           which cd-hit
-          pip install -r requirements.txt
+          pip install -r requirements_test.txt
           pip install coverage
           coverage run --source src/rnaglib -m pytest
           coverage report -m
