added .out to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ fonts/*
 **.ct
 **.bpseq
 
-## Experiments reuslts
+## Experiments results
 rnaglib/tasks/experiments/*/
+**.out
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
