--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,14 @@ jobs:
       - name: Export cd-hit path
         run: |
           echo /home/runner/work/rnaglib/rnaglib/cd-hit-v4.8.1-2019-0228 >> $GITHUB_PATH
+      - name: Install US-align 
+        run: |
+          wget https://zhanggroup.org/US-align/bin/module/USalign.cpp
+          g++ -static -O3 -ffast-math -o USalign USalign.cpp
+          chmod u+x ./USalign
+      - name: Export USalign path
+        run: |
+          echo /home/runner/work/rnaglib/rnaglib/USalign >> $GITHUB_PATH
       - name: Install rna-align 
         run: |
           wget https://zhanggroup.org/RNA-align/bin/RNAalign.tar.bz2
