--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -9,7 +9,7 @@ scikit-learn
 torch
 torch_geometric
 tqdm
-gemmi
+gemmi==0.6.7
 pytest
 rna-fm
 fr3d @ git+https://github.com/cgoliver/fr3d-python.git
