--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,8 @@ rnaglib = ["data_loading/graph_index_NR.json",
            "tasks/RNA_Ligand/data/gmsm_dataset.csv",
            "tasks/RNA_IF/data/das_split.pt",
            "tasks/RNA_IF/data/gRNAde_metadata.csv",
-           "config/cache/modifications_cache.json"]
+           "config/cache/modifications_cache.json",
+           "tasks/RNA_Ligand/data/binding_pockets.csv"]
 
 [tool.pytest.ini_options]
 
