Fix build problem for PR by adding missing rdkit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 biopython
 bidict
+forgi
+fr3d @ git+https://github.com/cgoliver/fr3d-python.git
+gemmi
 joblib
+loguru
 networkx
 numpy
 PuLP
+pytest
 requests
+rna-fm
+rdkit
 seaborn
 scikit-learn
 torch
 tqdm
-gemmi
-pytest
-rna-fm
-fr3d @ git+https://github.com/cgoliver/fr3d-python.git
-loguru
-forgi
