--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,11 +1,10 @@
-sphinx
+sphinx>=5.0.0
 sphinx-prompt
 sphinx_substitution_extensions
-sphinx-rtd-theme
+furo
+sphinx-copybutton
+sphinx-design
 sphinx_autodoc_typehints
 myst-parser
-git+https://github.com/cgoliver/rnaglib.git
-dgl
-rna-fm
-fr3d @ git+https://github.com/cgoliver/fr3d-python.git
+-e ..
 
